# learn-C

./: .gitignore  001.HelloWorld.md  002.int_and_char.md  003.float_double_and_long.md  004.data_type_strings.md  005.data_type_pointer.md  006.data_type_array.md  010.struct.md  011.typedef.md  012.function.md  013.function_pointers.md  015.argc_argv.md  016.multiple_source_files.md  017.string_functions_and_operations.md  018.char_pointer_vs_char_array.md  019.preprocessor.md  021.type_casting.md  022.malloc_and_free.md  023.create_header_file.md  README.md  signals_alarm.md
Makefile/: 001.Start.md
bit/: Bitwise_Logical_Operators.md  Bitwise_Shift_Operators.md
cmake/: CMake.md  CMakeLists.md
code/abc/: CMakeLists.txt  helloworld.c  r_drive0.c  r_drive1.c  rand0.c  s_and_r.c  typesize.c  where.c
code/abc/04/: defines.c  floats.c  intconv.c  stringf.c  talkback.c  width.c
code/abc/15/: binbit.c
code/crypto/: CMakeLists.txt
code/crypto/dh/: dh.c  dh_client.c  dh_server.c
code/crypto/digest/: digest.h
code/crypto/dsa/: dsa.c  dsa.h  dsa_app.c
code/crypto/ecc/: ecc_app.c  ecc_int.c  ecc_int.h
code/crypto/http/: http.c
code/crypto/math/: huge.c  huge.h  math.c
code/crypto/rsa/: rsa.c  rsa.h  rsa_sample.h  rsa_test.c  rsa_test_a.c  rsa_test_b_encryption.c  rsa_test_c_decryption.c  rsa_test_d_cipher.c
code/crypto/utils/: hex.c  hex_test.c
data_types/: Integer_Versus_Floating-Point_Types.md  char.md  type_size.md
io/: printf.md  scanf.md
memory/: storage_classes.md
pointers/: README.md
preprocessor/: define.md
string/: README.md  strlen.md
(+2 files in other folders)
